--- a/packages/native/example/package.json
+++ b/packages/native/example/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@dapper/native": "^1.0.0",
+    "@dappers/native": "^1.0.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "react": "17.0.2",
     "react-native": "0.68.2",
